<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Harsh Sharma
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />
    <item
        android:id="@+id/tab_tag_photo"
        android:icon="@drawable/selector_tag_photo"
        android:title="@string/tag_photo" />
    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/selector_search"
        android:title="@string/search" />
    <item
        android:id="@+id/tab_my_profile"
        android:icon="@drawable/selector_account_cirlce"
        android:title="@string/my_profile" />

</menu>