<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Harsh Sharma
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_tag_photo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DFDFE1"
        android:orientation="horizontal">

        <com.harsh.instatag.SquareImageView
            android:id="@+id/get_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:padding="5dp"
            android:src="@drawable/ic_go_back" />

        <TextView
            android:id="@+id/tag_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/tag_photo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp22" />

        <com.harsh.instatag.SquareImageView
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:padding="5dp"
            android:src="@drawable/ic_done" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_search_someone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#DFDFE1"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/search_for_a_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:hint="@string/search_for_user"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp18" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sp18" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.harsh.instatag.InstaTag
            android:id="@+id/insta_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:canWeAddTags="true"
            app:instaTextColor="@android:color/white" />

        <TextView
            android:id="@+id/tap_photo_to_tag_someone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/insta_tag"
            android:layout_gravity="bottom"
            android:background="#DFDFE1"
            android:gravity="center"
            android:text="@string/tap_here_to_choose_a_photo"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp18"
            android:textStyle="normal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_some_one_to_be_tagged"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EEFFFFFF"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
